--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://localhost:3306/explore_world?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
+    url: "jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
     username: root
-    password: toor
+    password: my-secret-pw
   servlet:
     multipart:
       max-file-size: 1MB
@@ -15,9 +15,9 @@ spring:
       filter:
         enabled: true
 
-#  sql:
-#    init:
-#      mode: always
+  sql:
+    init:
+      mode: always
   jpa:
     # Choose either MySQL 8 or MySQL 5 below
     # For MySQL 8
