--- a/local/docker-compose.yaml
+++ b/local/docker-compose.yaml
@@ -7,10 +7,11 @@ services:
     command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_bin']
     environment:
       - MYSQL_DATABASE=explore_world
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+#      - MYSQL_ROOT_PASSWORD=toor
+      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
   exploreworld:
     image: peteshonik/exploreworld:v1
     ports:
-      - "8081:8081"
+      - "8080:8080"
     environment:
       - MYSQL_HOST=db
